--- a/app/views/animals/mine.html.erb
+++ b/app/views/animals/mine.html.erb
@@ -8,10 +8,10 @@
   <div class="row">
   <%= render 'search_menu' %>
     <div class="col-md-10">
-      <% @animals.each do |animal| %>        
+      <% @animals.each do |animal| %>
         <div class="col-sm-6 col-md-4">
         <div class="thumbnail">
-          <img alt="100%x200" data-src="holder.js/100%x200" style="height: 200px; width: 100%; display: block;" src="<%= url_for(animal.files.first.variant(combine_options: { resize: "275x200^", extent: "275x200", background: "grey", gravity: "center"})) if animal.files.attached?  %>"
+          <img alt="100%x200" data-src="holder.js/100%x200" style="height: 200px; width: 100%; display: block;" src="<%= url_for(animal.pictures.first.variant(combine_options: { resize: "275x200^", extent: "275x200", background: "grey", gravity: "center"})) if animal.pictures.attached?  %>"
             data-holder-rendered="true">
           <div class="caption">
             <h3><%= animal.name %></h3>
@@ -24,7 +24,7 @@
         </div>
       </div>
       <% end %>
-     
+
 
     </div>
 
@@ -32,6 +32,6 @@
   <!-- /.row -->
 
 
- 
+
 </div>
 <!-- /.container -->
