--- a/app/views/animals/show.html.erb
+++ b/app/views/animals/show.html.erb
@@ -15,13 +15,13 @@
         }
       </style>
       <div class="fotorama" data-nav="thumbs" data-width="100%" data-ratio="800/600" data-thumb-height "46">
-        <% @animal.files.each do |file| %>
+        <% @animal.pictures.each do |file| %>
           <a href="<%= file.filename %>">
             <img src="<%= url_for(file.variant(combine_options: { resize: "800x600^", extent: "800x600", background: "grey", gravity: "center"})) %>">
           </a>
         <% end %>
       </div>
-      
+
       <div class="row-fluid property-info">
         <h4>
           <%= @animal.name %>
@@ -29,7 +29,7 @@
 
         <p class="description">
           <%= @animal.description %>
-        </p>       
+        </p>
       </div>
       <!-- end about property -->
     </div>
